# Memecoin-Portal-DApp

./: .gitignore
.github/workflows/: build-explorer-to-k8s.yml  build-indexer-to-k8s.yml  build-pinata-to-k8s.yml  build-tokenator-to-k8s.yml
contracts/: Readme.MD
contracts/fungible-token/: Cargo.toml  README.md
contracts/fungible-token/app/: Cargo.toml
contracts/fungible-token/app/src/: lib.rs
contracts/fungible-token/app/src/services/: utils.rs
contracts/fungible-token/app/src/services/admin/: funcs.rs  mod.rs  storage.rs  utils.rs
contracts/fungible-token/app/src/services/aggregated/: mod.rs
contracts/fungible-token/app/src/services/erc20/: funcs.rs  mod.rs
contracts/fungible-token/app/src/services/extended_vft/: funcs.rs  mod.rs  utils.rs
contracts/fungible-token/app/src/services/pausable/: mod.rs
contracts/fungible-token/app/src/services/roles/: funcs.rs  mod.rs
contracts/fungible-token/app/src/services/vft/: funcs.rs  mod.rs
contracts/fungible-token/app/tests/: test.rs
contracts/fungible-token/io/: Cargo.toml
contracts/fungible-token/io/src/: lib.rs
contracts/fungible-token/src/: lib.rs
contracts/fungible-token/wasm/: Cargo.toml  build.rs  meme-ft.idl
contracts/fungible-token/wasm/src/: lib.rs
contracts/meme-factory/: Cargo.toml  README.md
contracts/meme-factory-sails/: Cargo.toml
contracts/meme-factory-sails/app/: Cargo.toml
contracts/meme-factory-sails/app/src/: lib.rs  service.rs
contracts/meme-factory-sails/io/: Cargo.toml
contracts/meme-factory-sails/io/src/: lib.rs
contracts/meme-factory-sails/wasm/: Cargo.toml  build.rs  meme-factory.idl
contracts/meme-factory-sails/wasm/src/: lib.rs  tests.rs
contracts/meme-factory/app/: Cargo.toml
contracts/meme-factory/app/src/: lib.rs  service.rs
contracts/meme-factory/app/tests/: node_test.rs  test.rs
contracts/meme-factory/io/src/: lib.rs
contracts/meme-factory/src/: lib.rs  tests.rs
contracts/meme-factory/state/src/: lib.rs
contracts/meme-factory/tests/: tests.rs
contracts/meme-factory/wasm/: Cargo.toml  build.rs  meme-factory.idl
contracts/meme-factory/wasm/src/: lib.rs  tests.rs
frontend/: .env.example  .eslintrc.js  .gitignore  Dockerfile  deployProgramChain.ts  env.d.ts  global.d.ts  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/path/to/: meme-factory.idl  meme_factory.opt.wasm
frontend/src/: app.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/app/: actions.ts  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(marketing)/: layout.tsx  page.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(protected)/confirm-create/: page.tsx
frontend/src/app/(protected)/create-token/: page.tsx
frontend/src/app/(protected)/token/: page.tsx
frontend/src/app/tokens/: layout.tsx  page.tsx
frontend/src/app/tokens/(with-auth)/: layout.tsx
frontend/src/app/tokens/[id]/: page.tsx
frontend/src/app/tokens/my/: page.tsx
frontend/src/components/: app.tsx
frontend/src/components/banners/: create-token.animation.tsx  create-token.tsx  cta-create-token.tsx
frontend/src/components/common/: create-button-lazy.tsx  footer.tsx  header.tsx  wallet-lazy.tsx  with-auth-layout.tsx
frontend/src/components/common/animation-coins/: animation-coins.tsx  index.ts  styles.module.scss
frontend/src/components/common/back-button/: back-button.tsx  index.ts
frontend/src/components/common/create-button/: create-button.tsx  index.ts
frontend/src/components/common/data-table/: data-table.tsx  fuzzy-filter.tsx  input.tsx  mobile-list-coins.tsx  search-form.tsx  table-global-filter.tsx  table-go-to-page.tsx  table-header-actions.tsx  table-header.tsx  table-layout-wrapper.tsx  table-layout.tsx  table-navigation.tsx  table-page-sizing.tsx  table-pagination.tsx  table-row-actions-wrapper.tsx  table-row-no-results.tsx  table-row-skeleton.tsx  table-wrapper.tsx  text-field.tsx
frontend/src/components/layout/: layout.tsx
frontend/src/components/pages/: Create.tsx  Home.tsx
frontend/src/components/providers/: gear-api.tsx  index.tsx
frontend/src/components/ui/: accordion.tsx  carousel.tsx  dropdown-menu.tsx  select.tsx  sprite.tsx  table.tsx  ticker.tsx  ticker2.tsx  tooltip.tsx
frontend/src/lib/: consts.ts  requests.ts  types.ts  utils.ts
frontend/src/lib/data/: socials.ts
frontend/src/lib/hocs/: index.tsx
frontend/src/lib/hooks/: api.ts  use-auth.ts  use-check-mobile-size.ts  use-debounce.ts  use-fetch-balances.ts  use-fetch-coins.ts  use-fetch-my-coins.ts  use-fetch-single-coin.ts  use-message-factory.ts  use-message-token.ts  use-scroll-direction.ts  use-scroll-prevent.ts  use-send-message-with-reply.ts
frontend/src/lib/sails/: meme-factory.ts  meme-ft.ts  use-send-message-factory.ts  use-send-message-ft.ts
frontend/src/pages/: Confirm.tsx  Create.tsx  Home.tsx
frontend/src/styles/: globals.css  index.css  index.scss  tailwind.css
indexer/: .env.example  commands.json  package-lock.json  package.json  schema.graphql  squid.yaml
indexer/assets/: coin.idl  coin.meta.txt  factory.meta.txt  meme-factory.idl
indexer/db/migrations/: 1712235181171-Data.js  1713263964454-Data.js  1713344463294-Data.js  1716203117438-Data.js
indexer/src/: config.ts  consts.ts  main.ts  processor.ts
indexer/src/coin-types/: lib.ts
indexer/src/factory-types/: lib.ts
indexer/src/processing/: batch.service.ts  entities.service.ts  events.processing.ts
indexer/src/processing/coin/: admin-added.handler.ts  admin-deleted.handler.ts  burned.handler.ts  coin.handler.ts  description-changed.handler.ts  external-link-changed.handler.ts  image-link-changed.handler.ts  minted.handler.ts  transferred-to-users.handler.ts  transferred.handler.ts
indexer/src/processing/factory/: factory.handler.ts  meme-created.handler.ts
indexer/src/processing/storage/: local.storage.ts  storage.inteface.ts
indexer/src/types/: balance.utils.ts  coin.events.ts  event.utils.ts  factory.events.ts
pinata-proxy/: Dockerfile
(+94 files in other folders)
