[package]
name = "fungible-token"
version = "0.1.0"
edition = "2021"

[dependencies]
fungible-token-io = { path = "io" }
gstd = "=1.3.0"

[dev-dependencies]
gstd = "=1.3.0"
gtest = "=1.3.0"

[build-dependencies]
fungible-token-io = { path = "io" }
gear-wasm-builder = "1.1.1"

[features]
binary-vendor = []
