[workspace]
resolver = "2"

members = [
    "app", "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "1.1.1"
gtest = "1.1.1"
gwasm-builder = { package = "gear-wasm-builder", version = "1.1.1" }
parity-scale-codec = { version = "3.6", default-features = false }
sails-clientgen = { path = "../../sails/client-gen" }
sails-exec-context-gstd = { path = "../../sails/client-gen" }
sails-idl-meta = { path = "../../sails/idl-meta" }
sails-idlgen = { path = "../../sails/idlgen" }
sails-idlparser = { path = "../../sails/client-gen" }
sails = { path = "../../sails/client-gen" }
sails-rtl = { path = "../../sails/rtl" }
sails-sender = { path = "../../sails/client-gen" }
sails-macros =   { path = "../../sails/macros" }
scale-info = { version = "2.10", default-features = false }
primitive-types = { version = "*", default-features = false }
derive-more = { version = "*", default-features = false, features = ["display"] }
log = "*"
env_logger = "*"
serde = "1.0"
serde-json = { package = "serde_json", version = "1.0" }
syn = "2.0"
thiserror = "1.0"
tokio = "1.36"
trybuild = "1"
