[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = ["app", "wasm"]

[workspace.dependencies]
app = { path = "app" }
sails-idl-gen = { git = "https://github.com/gear-tech/sails", rev = "51b731ef8f064a23c6c98fa92d06eeafe44d3f9d" }
sails-rtl = { git = "https://github.com/gear-tech/sails", rev = "51b731ef8f064a23c6c98fa92d06eeafe44d3f9d" }
gstd = "1.1.1"
gtest = "1.1.1"
gclient  = "1.1.1"
gear-wasm-builder = "1.1.1"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
log = "0.4.21"
primitive-types = { version = "*", default-features = false }
tokio = "1"
