[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = ["app", "wasm"]

[workspace.dependencies]
app = { path = "app" }
sails-idl-gen = { git = "https://github.com/gear-tech/sails" }
sails = { git = "https://github.com/gear-tech/sails" }
gstd = "1.4.2"
gtest = "1.4.2"
gclient  = "1.4.2"
gear-wasm-builder = "1.4.2"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
log = "0.4.21"
primitive-types = { version = "*", default-features = false }
tokio = "1"
