[package]
name = "vft_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vft-app = { path = "../app" }

[build-dependencies]
gwasm-builder.workspace = true
sails-idl-gen.workspace = true
vft-app = { path = "../app" }

[lib]
crate-type = ["rlib"]
name = "vft_wasm"
