[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { workspace = true }

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true
parity-scale-codec.workspace = true

[build-dependencies]
app.workspace = true
sails-clientgen.workspace = true
sails-idlgen.workspace = true
gear-wasm-builder.workspace = true

[features]
debug = ["app/debug"]
