[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-macros.workspace = true
sails-rtl.workspace = true
sails-idl-meta.workspace = true
gstd.workspace = true
primitive-types.workspace = true

scale-info.workspace = true
parity-scale-codec.workspace = true

[features]
debug = ["gstd/debug"]

[dev-dependencies]
gtest.workspace = true
