[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-rs.workspace = true
gstd.workspace = true
primitive-types.workspace = true

scale-info.workspace = true
parity-scale-codec.workspace = true

[features]
debug = ["gstd/debug"]

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
